<resources>
    <string name="app_name">UnConvert</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="convert">Convert</string>
    <string name="distance_conversions">Distance Conversions</string>
    <string name="answer_is">Answer is</string>
    <string name="after_conversion">After Conversion:</string>
    <string name="enter_the_value">Enter the Value</string>
    <string name="all_rights_are_reserved">All rights are reserved</string>
    <string name="todo">TODO</string>
    <string name="log">TODO</string>
    <string name="logo">LOGO</string>
</resources>